2003-09-14  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (_compile_rule)  Bugfix:  A sublist
	followed by a right paren (e.g., "(!@MAIN)") in a rule
	would result in a syntax error because the paren was discarded.

	* lib/Mj/Util.pm:  (process_rule)  Bugfix:  The default 
	"ignore" is not a terminal action.

2003-09-12  Michael Yount <csf@moscow.com>

	* lib/Mj/Format.pm:  (configset, configshow, sescape)
	Escape dollar signs to avoid unwanted substitutions.
	Thanks to SRE.

2003-08-30  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_get_msg_data)  Improve MIME
	entity validation.

	* lib/Mj/Resend.pm:  (_r_ck_body, _add_fters) Improve 
	validation of MIME body parts.

2003-08-13  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (_r_strip_body)  Bugfix:  allow
	single-part HTML messages to be cleaned.
	(clean_text)  Distinguish empty elements from elements
	with content.
	Process the decoded, not encoded, text.

	* lib/Mj/Util.pm:  (plain_to_hyper)  Change the escape()
	calling conventions
	(clean_html)  Distinguish empty elements from elements
	with content.
	
2003-08-12  Michael Yount <csf@moscow.com>

	* lib/Mj/Resend.pm:  (_r_strip_body)  Bugfix:  preserve
	the original character set and encoding of altered
	message parts.
	(_format_text)  Process the decoded, not encoded, text.

2003-06-20  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect)  Close the session handle
	explicitly to avoid potential descriptor leak.

	* lib/Mj/Token.pm:  Improve error checking when 
	_make_tokendb is called.

2003-06-12  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  Give a clearer response when someone signs
	in.  Suggested by Roger Klorese.

2003-06-08  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_taboo_body, parse_taboo_headers)
	Bugfix:  Skip lines that have no pattern.
	Thanks to Roger Klorese.

2003-06-06  Michael Yount <csf@moscow.com>

	* lib/Mj/Config.pm:  (parse_bounce_rules)  Bugfix:  Add